--- a/JSP_야간_2012151025/WebContent/View/Introduce.html
+++ b/JSP_야간_2012151025/WebContent/View/Introduce.html
@@ -8,18 +8,21 @@
 
 <h1>PSJ 호텔</h1><br>
 -특1등급-<br><br>
-특1급 럭셔리 올인클루시브형 호텔인 켄싱턴 호텔 제주는 중문관광단지 내 위치하고 있어 천제연 폭포, 중문색달 해변, 여미지 식물원 등에서 가까운 거리에 있습니다. 제주를 대표하는 한라산까지는 차로 약 40분이 소요됩니다. 또한, 하루 4회 제주국제공항까지 셔틀버스를 운영하고 있습니다. 호텔 내에는 국내 최초 사계절 루프탑 야외 수영장인 스카이피니티와 사계절 온수풀 오션 피니티가 있습니다. 호텔에 머무는 동안 제주의 오름을 형상화한 정원인 모을에서 산책을 즐기시거나 더 스파 바이 딸고에서 최고급 해양 코스메틱 제품으로 관리를 받으실 수도 있습니다. 또한, 호텔 투숙 시에는 수영장, 사우나 피트니스 센터, 주차장 등을 무료로 이용하실 수 있습니다.  총 221객실이 있으며 포인포 키즈 테마룸, 코리안 제주 스위트, 프레지덴셜 골프 스위트 등 다양한 테마의 객실이 준비되어 있습니다. 모든 객실에서는 대형 창문을 통해 자연 채광을 즐기실 수 있으며 Wi-Fi도 완비되어 있습니다. 객실에는 무료 이용 가능한 미니 바, 네스프레소 머신, 몰튼브라운 어메니티가 구비되어 있습니다. 
+특1급 럭셔리 올인클루시브형 호텔인 PSJ 호텔은 서울 강남구 내 위치하고 있어 강남역, 코엑스, 가로수길, 선정릉 등에서 가까운 거리에 있습니다. 서울 시청까지는 차로 약 40분이 소요됩니다. 또한, 하루 4회 인천국제공항과 김포공항까지 셔틀버스를 운영하고 있습니다. 호텔 내에는 국내 최초 사계절 루프탑 야외 수영장인 스카이오션ㄱ 사계절 온수풀 오션 피니티가 있습니다. 호텔에 머무는 동안 제주의 오름을 형상화한 정원인 모을에서 산책을 즐기시거나 더 스파 바이 딸고에서 최고급 해양 코스메틱 제품으로 관리를 받으실 수도 있습니다. 또한, 호텔 투숙 시에는 수영장, 사우나 피트니스 센터, 주차장 등을 무료로 이용하실 수 있습니다.  총 221객실이 있으며 포인포 키즈 테마룸, 코리안 제주 스위트, 프레지덴셜 골프 스위트 등 다양한 테마의 객실이 준비되어 있습니다. 모든 객실에서는 대형 창문을 통해 자연 채광을 즐기실 수 있으며 Wi-Fi도 완비되어 있습니다. 객실에는 무료 이용 가능한 미니 바, 네스프레소 머신, 몰튼브라운 어메니티가 구비되어 있습니다. 
 <br><br>
 호텔 내 지하 2층 월드퀴진 뷔페 라올레에서는 80여 가지 세계 각국의 요리를, 돌미롱에서는 제주산 제철 식자재로 만든 제주 특선 요리를, 루프탑에 위치한 하늘오름에서는 제주 바다를 조망하며 이탈리안 요리를 맛보실 수 있습니다. 그 외에도 내부에 카페, 풀사이드 카페, 루프탑 샴페인 바 등이 있어 편리하게 이용하실 수 있습니다.
 <br><br>
-일반사항룸 서비스, 레스토랑, 장애인 편의 시설, 에어컨, 냉장고, 케이블/위성 TV, 욕조, 커피 / 차 메이커, 헤어드라이어, TV, 데스크, 장애인 주차 시설, 목욕 가운, 샤워, 스위트룸, 개인 욕실, 비데, 키즈 클럽편의 시설피트니스센터, 수영장, 마사지/관리 샵, 사우나, 정원, 자쿠지, 마사지, 스파 및 웰니스 센터, 바디 트리트먼트, 어린이 수영장서비스비즈니스 센터, 엘리베이터, 24시간 리셉션, 드라이클리닝 서비스, 연회 시설, 컨퍼런스룸, 외국어 구사 직원, 안전 금고, ATM/현금지급기, 모닝콜 서비스, 회의실, 세탁 서비스, 상점, 무도회장, 물품보관소, 별도 흡연 구역, 호텔 내 상점, 기념품 가게인터넷무선 인터넷주차무료 주차 가능. 공항 셔틀 서비스 제공.체크인오후 3:00 이후체크아웃오후 12:00 이전
+[호텔 서비스 및 시설현황]<br>
+레스토랑, 장애인 편의 시설, 에어컨, 냉장고, 케이블/위성 TV, 욕조, 커피 / 차 메이커, 헤어드라이어, TV, 데스크, 장애인 주차 시설, 목욕 가운, 샤워, 스위트룸, 개인 욕실, 비데, 키즈 클럽편의 시설피트니스센터, 수영장, 마사지/관리 샵, 사우나, 정원, 자쿠지, 마사지, 스파 및 웰니스 센터, 바디 트리트먼트, 어린이 수영장서비스비즈니스 센터, 엘리베이터, 24시간 리셉션, 드라이클리닝 서비스, 연회 시설, 컨퍼런스룸, 외국어 구사 직원, 안전 금고, ATM/현금지급기, 모닝콜 서비스, 회의실, 세탁 서비스, 상점, 무도회장, 물품보관소, 별도 흡연 구역, 호텔 내 상점, 기념품 가게인터넷무선 인터넷주차무료 주차 가능. 공항 셔틀 서비스 제공.체크인오후 3:00 이후체크아웃오후 12:00 이전
 
+<br><br>
+<br><br>
 
-
-
-<form action="/ViewJSP/Introduce.jsp" method="post">
+<form action="../ViewJSP/Introduce.jsp">
+<input type = "submit" value = "객실확인"><br><br>
 <button type = "button" onclick = "document.location.href='Main.html';">홈</button>
 </form>
+
 <br>
 <br>
 
