--- a/JSP_야간_2012151025/WebContent/View/Login.html
+++ b/JSP_야간_2012151025/WebContent/View/Login.html
@@ -13,8 +13,8 @@
 
 <br><br>
 </center>
-<form method = "post" action = "/ViewJSP/Login.jsp">
-	E-mail : <input type = "text" name = "id" width = "50"><br><br>
+<form method = "post" action = "../ViewJSP/Login.jsp">
+	E-mail : <input type = "text" name = "email" width = "50"><br><br>
 	Password : <input type = "password" name = "password" width = "50"><br><br>
 	<input type = "submit" value = "로그인"><br><br>
 	<button type = "button" onclick = "document.location.href='SignUp.html';">회원가입</button><br><br>
