--- a/JSP_야간_2012151025/WebContent/View/SignUp.html
+++ b/JSP_야간_2012151025/WebContent/View/SignUp.html
@@ -7,19 +7,29 @@
 <body>
 <center>
 <span style="font-weight: bold; font-size: 2em; line-height: 1.0em; color: navy; font-family: arial; ">
-호텔 예약 사이트
+회원가입페이지
 </span>
 <hr><br>
 </center>
 
-<br><br>
+<span style="font-weight: bold; font-size: 1.5em; line-height: 1.0em; color: RED; font-family: arial; ">
+[회원가입방법]<br>
+</span>
+이메일 : 이메일을 아이디로 사용합니다. ex) psjhotel12@korea.com<br><br>
+패스워드 : 숫자와 글자 조합을 추천합니다. ex) psj12hotel <br><br>
+이름 : 회원님의 본명을 입력하세요. ex) 이순신<br><br>
+전화번호 : 핸드폰 혹은 자택번호를 입력하세요. '-'을 생략합니다. ex) 01099882145<br><br>
+생년월일 : 회원님의 생년월일을 입력하세요. '-'을 생략합니다. ex) 19980302<br><br>
+결제카드 : 카드사/은행과 계좌번호 혹은 카드번호를 입력하세요. ex) 국민은행 947834895<br><br>
+<hr><br>
 
 <form method = "post" action = "/ViewJSP/SignUp.jsp">
-아이디 : <input type = "text" name = "userid" width = "50"><br><br>
-패스워드 : <input type = "password" name = "password" width = "50"><br><br>
-이름 : <input type = "text" name = "username" width = "50"><br><br>
-이메일 : <input type = "text" name = "email" width = "50"><br><br>
-전화번호 : <input type = "text" name = "tell" width = "50"><br><br>
+이메일 : <input type = "text" name = "emailid" width = "100"><br><br>
+패스워드 : <input type = "password" name = "password" width = "100"><br><br>
+이름 : <input type = "text" name = "username" width = "100"><br><br>
+전화번호 : <input type = "text" name = "tell" width = "100"><br><br>
+생년월일 : <input type = "text" name = "birthday" width = "100"><br><br>
+결제카드 : <input type = "text" name = "credicard" width = "100"><br><br>
 <input type = "submit" value = "가입완료">
 <input type = "reset" value = "취소" onclick = "document.location.href='Login.html';"/>
 </form>
