Signup 화면전환 완성 JDBC구현해야됨

--- a/JSP_야간_2012151025/WebContent/View/Introduce.html
+++ b/JSP_야간_2012151025/WebContent/View/Introduce.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>호텔예약::호텔소개</title>
 </head>
-<body>
+<body bgcolor="FFFF99">
 
 <h1>PSJ 호텔</h1><br>
 -특1등급-<br><br>
