--- a/JSP_야간_2012151025/WebContent/View/SignUp.html
+++ b/JSP_야간_2012151025/WebContent/View/SignUp.html
@@ -4,7 +4,7 @@
 <meta charset="EUC-KR">
 <title>회원가입페이지</title>
 </head>
-<body>
+<body bgcolor="FFFF99">
 <center>
 <span style="font-weight: bold; font-size: 2em; line-height: 1.0em; color: navy; font-family: arial; ">
 회원가입페이지
@@ -23,13 +23,13 @@
 결제카드 : 카드사/은행과 계좌번호 혹은 카드번호를 입력하세요. ex) 국민은행 947834895<br><br>
 <hr><br>
 
-<form method = "post" action = "/ViewJSP/SignUp.jsp">
+<form method = "post" action = "../ViewJSP/SignUp.jsp">
 이메일 : <input type = "text" name = "emailid" width = "100"><br><br>
 패스워드 : <input type = "password" name = "password" width = "100"><br><br>
 이름 : <input type = "text" name = "username" width = "100"><br><br>
-전화번호 : <input type = "text" name = "tell" width = "100"><br><br>
-생년월일 : <input type = "text" name = "birthday" width = "100"><br><br>
-결제카드 : <input type = "text" name = "credicard" width = "100"><br><br>
+전화번호 : <input type = "number" name = "tell" width = "100"><br><br>
+생년월일 : <input type = "date" name = "birthday" width = "100"><br><br>
+결제카드 : <input type = "text" name = "creditcard" width = "100"><br><br>
 <input type = "submit" value = "가입완료">
 <input type = "reset" value = "취소" onclick = "document.location.href='Login.html';"/>
 </form>
