1. 회원가입  - 값넘기고 페이지전환 완성  - DB에 입출력 구현해야됨 2. 비밀번호 찾기  - 입력값 제대로 안받아와짐  - 입력값 검사 및 DB검사 구현해야되

--- a/JSP_야간_2012151025/WebContent/View/FindPassword.html
+++ b/JSP_야간_2012151025/WebContent/View/FindPassword.html
@@ -7,8 +7,11 @@
 </head>
 <body>
 
-<form action="/ViewJSP/FindPassword.jsp" method="post">
-<input type = "reset" value = "취소" onclick = "document.location.href='Login.html';"/>
+<form action="../ViewJSP/FindPassword.jsp" method="post">
+	이메일을 입력해주세요.<br>
+	<input type = "text" name = "emailid" width = "100"><br><br>
+	<input type = "submit" value = "비밀번호 조회">
+	<input type = "reset" value = "취소" onclick = "document.location.href='Login.html';"/>
 </form>
 
 </body>
