--- a/JSP_야간_2012151025/WebContent/View/Main.html
+++ b/JSP_야간_2012151025/WebContent/View/Main.html
@@ -7,11 +7,11 @@
 <body>
 
 <form action="/ViewJSP/Main.jsp" method="post">
-<button type = "button" onclick = "document.location.href='Introduce.html';">호텔 소개</button><br><br>
-<button type = "button" onclick = "document.location.href='Check.html';">예약현황</button><br><br>
-<button type = "button" onclick = "document.location.href='Reservation.html';">예약하기</button><br><br>
-<button type = "button" onclick = "document.location.href='MyReservation.html';">나의 예약관리</button><br><br>
-<input type = "reset" value = "로그아웃" onclick = "document.location.href='Login.html';"/><br><br>
+	<button type = "button" onclick = "document.location.href='Introduce.html';">호텔 소개</button><br><br>
+	<button type = "button" onclick = "document.location.href='Check.html';">예약현황</button><br><br>
+	<button type = "button" onclick = "document.location.href='../ViewJSP/Reservation.jsp';">예약하기</button><br><br>
+	<button type = "button" onclick = "document.location.href='MyReservation.html';">나의 예약관리</button><br><br>
+	<input type = "reset" value = "로그아웃" onclick = "document.location.href='Login.html';"/><br><br>
 </form>
 
 </body>
