--- a/JSP_야간_2012151025/WebContent/View/Reservation.html
+++ b/JSP_야간_2012151025/WebContent/View/Reservation.html
@@ -4,9 +4,30 @@
 <meta charset="EUC-KR">
 <title>Insert title here</title>
 </head>
-<body>
+<body bgcolor="FFFF99">
+<center>
+
+<span style="font-weight: bold; font-size: 2em; line-height: 1.0em; color: 660000; font-family: arial; ">
+객실 예약
+</span>
+</center>
 
 <form action="/ViewJSP/Reservation.jsp" method="post"/>
+	객실 종류 : <input type = "text" name = "email" width = "50"><br><br>
+	<input type="radio" name="chk_info" value="수페리어">수페리어
+	<input type="radio" name="chk_info" value="더블 수페리어">더블 수페리어
+	<input type="radio" name="chk_info" value="트윈 수페리어">트윈 수페리어
+	<input type="radio" name="chk_info" value="디럭스">디럭스
+	<input type="radio" name="chk_info" value="디럭스 풀">디럭스 풀
+	<input type="radio" name="chk_info" value="이그제큐디브">이그제큐디브
+	<input type="radio" name="chk_info" value="스위트">스위트
+	<input type="radio" name="chk_info" value="그랜드 스위트">그랜드 스위트
+	
+	객실 호수(층): <input type = "password" name = "password" width = "50"><br><br>
+
+	체크인 
+	체크아웃
+
 <input type = "reset" value = "취소" onclick = "document.location.href='Main.html';"/>
 </form>
 
