--- a/JSP_야간_2012151025/WebContent/View/SignUp.html
+++ b/JSP_야간_2012151025/WebContent/View/SignUp.html
@@ -28,7 +28,7 @@
 패스워드 : <input type = "password" name = "password" width = "100"><br><br>
 이름 : <input type = "text" name = "username" width = "100"><br><br>
 전화번호 : <input type = "number" name = "tell" width = "100"><br><br>
-생년월일 : <input type = "date" name = "birthday" width = "100"><br><br>
+생년월일 : <input type = "text" name = "birthday" width = "100"><br><br>
 결제카드 : <input type = "text" name = "creditcard" width = "100"><br><br>
 <input type = "submit" value = "가입완료">
 <input type = "reset" value = "취소" onclick = "document.location.href='Login.html';"/>
