1. MVC 디렉토리 수정 2. Roomid, Roomtype 제작 중 3. 전체 예약 조회 및 나의 예약조회, 나의 예약 변경 제작 중

--- a/JSP_야간_2012151025/WebContent/View/Check.html
+++ b/JSP_야간_2012151025/WebContent/View/Check.html
@@ -4,7 +4,7 @@
 <meta charset="EUC-KR">
 <title>호텔예약::예약확인</title>
 </head>
-<body>
+<body bgcolor="FFFF99">
 
 <form action="/ViewJSP/Check.jsp" method="post">
 <input type = "reset" value = "홈" onclick = "document.location.href='Main.html';"/>
