--- a/JSP_야간_2012151025/WebContent/View/SignUp.html
+++ b/JSP_야간_2012151025/WebContent/View/SignUp.html
@@ -13,7 +13,7 @@
 </center>
 
 <span style="font-weight: bold; font-size: 1.5em; line-height: 1.0em; color: RED; font-family: arial; ">
-[회원가입방법]<br>
+[회원가입방법]<br><br>
 </span>
 이메일 : 이메일을 아이디로 사용합니다. ex) psjhotel12@korea.com<br><br>
 패스워드 : 숫자와 글자 조합을 추천합니다. ex) psj12hotel <br><br>
