--- a/JSP_야간_2012151025/WebContent/View/Main.html
+++ b/JSP_야간_2012151025/WebContent/View/Main.html
@@ -4,14 +4,14 @@
 <meta charset="EUC-KR">
 <title>호텔예약::메인페이지</title>
 </head>
-<body>
+<body bgcolor="FFFF99">
 
-<form action="/ViewJSP/Main.jsp" method="post">
+<form action="../ViewJSP/Main.jsp" method="post">
 	<button type = "button" onclick = "document.location.href='Introduce.html';">호텔 소개</button><br><br>
 	<button type = "button" onclick = "document.location.href='Check.html';">예약현황</button><br><br>
-	<button type = "button" onclick = "document.location.href='../ViewJSP/Reservation.jsp';">예약하기</button><br><br>
+	<button type = "button" onclick = "document.location.href='Reservation.html';">예약하기</button><br><br>
 	<button type = "button" onclick = "document.location.href='MyReservation.html';">나의 예약관리</button><br><br>
-	<input type = "reset" value = "로그아웃" onclick = "document.location.href='Login.html';"/><br><br>
+	<button type = "button" onclick = "document.location.href='Login.html';"/>로그아웃</button><br><br>
 </form>
 
 </body>
