--- a/JSP_야간_2012151025/WebContent/View/MyReservation.html
+++ b/JSP_야간_2012151025/WebContent/View/MyReservation.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <meta charset="EUC-KR">
-<title>Insert title here</title>
+<title>너의 예약조회</title>
 </head>
-<body>
+<body bgcolor="FFFF99">
+나의 예약확인하기<br>
 
 <form action="/ViewJSP/MyReservation.jsp" method="post"/>
-
-
-
-<input type = "reset" value = "취소" onclick = "document.location.href='Main.html';"/>
+E-mail : <input type = "text" name = "emailid" width = "50"><br><br>
+<input type = "submit" value = "로그인"><br>
+<input type = "reset" value = "취소" onclick = "document.location.href='Main.html';"/><br>
 </form>
 
 
