1. view-html utf-8변환 2. mysql 한글 insert완료

--- a/JSP_야간_2012151025/WebContent/View/Check.html
+++ b/JSP_야간_2012151025/WebContent/View/Check.html
@@ -6,9 +6,15 @@
 </head>
 <body bgcolor="FFFF99">
 
-<form action="/ViewJSP/Check.jsp" method="post">
-<input type = "reset" value = "홈" onclick = "document.location.href='Main.html';"/>
+<form action="../ViewJSP/Check.jsp" method="post">
+1. 호텔 전체 예약조회 <br>
+<input type = "submit" value = "전체조회"><br><br>
 </form>
+<br><br>
+2. 나의 예약조회 <br>
+<button type = "button" onclick = "document.location.href='MyReservation.html';">개인조회 </button><br><br>
+<br><br>
+<input type = "reset" value = "홈" onclick = "document.location.href='Main.html';"/>
 
 </body>
 </html>
