--- a/JSP_야간_2012151025/WebContent/View/Login.html
+++ b/JSP_야간_2012151025/WebContent/View/Login.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
-<title>È£ÅÚ¿¹¾à::·Î±×ÀÎÆäÀÌÁö</title>
+<meta charset="UTF-8">
+<title>í˜¸í…”ì˜ˆì•½::ë¡œê·¸ì¸íŽ˜ì´ì§€</title>
 </head>
 <body bgcolor="FFFF99">
 <center>
 
 <span style="font-weight: bold; font-size: 2em; line-height: 1.0em; color: 660000; font-family: arial; ">
-È£ÅÚ ¿¹¾à »çÀÌÆ®
+í˜¸í…” ì˜ˆì•½ ì‚¬ì´íŠ¸
 </span>
 <hr><br>
 </center>
@@ -18,8 +18,8 @@
 <form method = "post" action = "../ViewJSP/Login.jsp">
 	E-mail : <input type = "text" name = "emailid" width = "50"><br><br>
 	Password : <input type = "password" name = "password" width = "50"><br><br>
-	<input type = "submit" value = "·Î±×ÀÎ"><br><br>
-	<button type = "button" onclick = "document.location.href='SignUp.html';">È¸¿ø°¡ÀÔ</button><br><br>
+	<input type = "submit" value = "ë¡œê·¸ì¸"><br><br>
+	<button type = "button" onclick = "document.location.href='SignUp.html';">íšŒì›ê°€ìž…</button><br><br>
 </form>
 
 </body>
