--- a/JSP_야간_2012151025/WebContent/View/Main.html
+++ b/JSP_야간_2012151025/WebContent/View/Main.html
@@ -11,7 +11,12 @@
 	<button type = "button" onclick = "document.location.href='Check.html';">예약현황</button><br><br>
 	<button type = "button" onclick = "document.location.href='Reservation.html';">예약하기</button><br><br>
 	<button type = "button" onclick = "document.location.href='MyReservation.html';">나의 예약관리</button><br><br>
-	<button type = "button" onclick = "document.location.href='Login.html';"/>로그아웃</button><br><br>
+</form>
+<hr>
+<br>
+
+<form action="../ViewJSP/Logout.jsp" method="post">
+	<input type = "submit" value = "로그아웃"><br><br>
 </form>
 
 </body>
