--- a/JSP_야간_2012151025/WebContent/View/MyReservation.html
+++ b/JSP_야간_2012151025/WebContent/View/MyReservation.html
@@ -7,9 +7,9 @@
 <body bgcolor="FFFF99">
 나의 예약확인하기<br>
 
-<form action="/ViewJSP/MyReservation.jsp" method="post"/>
+<form action="../ViewJSP/MyReservation.jsp" method="post">
 E-mail : <input type = "text" name = "emailid" width = "50"><br><br>
-<input type = "submit" value = "로그인"><br>
+<input type = "submit" value = "조회"><br><br>
 <input type = "reset" value = "취소" onclick = "document.location.href='Main.html';"/><br>
 </form>
 
