--- a/JSP_야간_2012151025/WebContent/View/SignUp.html
+++ b/JSP_야간_2012151025/WebContent/View/SignUp.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
-<title>È¸¿ø°¡ÀÔÆäÀÌÁö</title>
+<meta charset="UTF-8">
+<title>íšŒì›ê°€ìž…íŽ˜ì´ì§€</title>
 </head>
 <body bgcolor="FFFF99">
 <center>
 <span style="font-weight: bold; font-size: 2em; line-height: 1.0em; color: navy; font-family: arial; ">
-È¸¿ø°¡ÀÔÆäÀÌÁö
+íšŒì›ê°€ìž…íŽ˜ì´ì§€
 </span>
 <hr><br>
 </center>
 
 <span style="font-weight: bold; font-size: 1.5em; line-height: 1.0em; color: RED; font-family: arial; ">
-[È¸¿ø°¡ÀÔ¹æ¹ý]<br><br>
+[íšŒì›ê°€ìž…ë°©ë²•]<br><br>
 </span>
-ÀÌ¸ÞÀÏ : ÀÌ¸ÞÀÏÀ» ¾ÆÀÌµð·Î »ç¿ëÇÕ´Ï´Ù. ex) psjhotel12@korea.com<br><br>
-ÆÐ½º¿öµå : ¼ýÀÚ¿Í ±ÛÀÚ Á¶ÇÕÀ» ÃßÃµÇÕ´Ï´Ù. ex) psj12hotel <br><br>
-ÀÌ¸§ : È¸¿ø´ÔÀÇ º»¸íÀ» ÀÔ·ÂÇÏ¼¼¿ä. ex) ÀÌ¼ø½Å<br><br>
-ÀüÈ­¹øÈ£ : ÇÚµåÆù È¤Àº ÀÚÅÃ¹øÈ£¸¦ ÀÔ·ÂÇÏ¼¼¿ä. '-'À» »ý·«ÇÕ´Ï´Ù. ex) 01099882145<br><br>
-»ý³â¿ùÀÏ : È¸¿ø´ÔÀÇ »ý³â¿ùÀÏÀ» ÀÔ·ÂÇÏ¼¼¿ä. '-'À» »ý·«ÇÕ´Ï´Ù. ex) 19980302<br><br>
-°áÁ¦Ä«µå : Ä«µå»ç/ÀºÇà°ú °èÁÂ¹øÈ£ È¤Àº Ä«µå¹øÈ£¸¦ ÀÔ·ÂÇÏ¼¼¿ä. ex) ±¹¹ÎÀºÇà 947834895<br><br>
+ì´ë©”ì¼ : ì´ë©”ì¼ì„ ì•„ì´ë””ë¡œ ì‚¬ìš©í•©ë‹ˆë‹¤. ex) psjhotel12@korea.com<br><br>
+íŒ¨ìŠ¤ì›Œë“œ : ìˆ«ìžì™€ ê¸€ìž ì¡°í•©ì„ ì¶”ì²œí•©ë‹ˆë‹¤. ex) psj12hotel <br><br>
+ì´ë¦„ : íšŒì›ë‹˜ì˜ ë³¸ëª…ì„ ìž…ë ¥í•˜ì„¸ìš”. ex) ì´ìˆœì‹ <br><br>
+ì „í™”ë²ˆí˜¸ : í•¸ë“œí° í˜¹ì€ ìžíƒë²ˆí˜¸ë¥¼ ìž…ë ¥í•˜ì„¸ìš”. '-'ì„ ìƒëžµí•©ë‹ˆë‹¤. ex) 01099882145<br><br>
+ìƒë…„ì›”ì¼ : íšŒì›ë‹˜ì˜ ìƒë…„ì›”ì¼ì„ ìž…ë ¥í•˜ì„¸ìš”. '-'ì„ ìƒëžµí•©ë‹ˆë‹¤. ex) 19980302<br><br>
+ê²°ì œì¹´ë“œ : ì¹´ë“œì‚¬/ì€í–‰ê³¼ ê³„ì¢Œë²ˆí˜¸ í˜¹ì€ ì¹´ë“œë²ˆí˜¸ë¥¼ ìž…ë ¥í•˜ì„¸ìš”. ex) êµ­ë¯¼ì€í–‰ 947834895<br><br>
 <hr><br>
 
 <form method = "post" action = "../ViewJSP/SignUp.jsp">
-ÀÌ¸ÞÀÏ : <input type = "text" name = "emailid" width = "100"><br><br>
-ÆÐ½º¿öµå : <input type = "password" name = "password" width = "100"><br><br>
-ÀÌ¸§ : <input type = "text" name = "username" width = "100"><br><br>
-ÀüÈ­¹øÈ£ : <input type = "number" name = "tell" width = "100"><br><br>
-»ý³â¿ùÀÏ : <input type = "text" name = "birthday" width = "100"><br><br>
-°áÁ¦Ä«µå : <input type = "text" name = "creditcard" width = "100"><br><br>
-<input type = "submit" value = "°¡ÀÔ¿Ï·á">
-<input type = "reset" value = "Ãë¼Ò" onclick = "document.location.href='Login.html';"/>
+ì´ë©”ì¼ : <input type = "text" name = "emailid" width = "100"><br><br>
+íŒ¨ìŠ¤ì›Œë“œ : <input type = "password" name = "password" width = "100"><br><br>
+ì´ë¦„ : <input type = "text" name = "username" width = "100"><br><br>
+ì „í™”ë²ˆí˜¸ : <input type = "text" name = "tell" width = "100"><br><br>
+ìƒë…„ì›”ì¼ : <input type = "text" name = "birthday" width = "100"><br><br>
+ê²°ì œì¹´ë“œ : <input type = "text" name = "creditcard" width = "100"><br><br>
+<input type = "submit" value = "ê°€ìž…ì™„ë£Œ">
+<input type = "reset" value = "ì·¨ì†Œ" onclick = "document.location.href='Login.html';"/>
 </form>
 
 </body>
